--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -81,8 +81,7 @@ jobs:
     name: NPM Release
     needs: [code_validation, tests]
     runs-on: ubuntu-latest
-    if:
-      ${{ github.repository == 'max-revops/eslint-plugin-testing-library-revops' &&
+    if: ${{ github.repository == 'max-revops/eslint-plugin-testing-library' &&
       contains('refs/heads/main,refs/heads/beta,refs/heads/next,refs/heads/alpha',
       github.ref) && github.event_name == 'push' }}
 
